--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7249,3 +7249,34 @@ label.inline {
 #rating>input:checked~label:hover,
 #rating>label:hover~input:checked~label,
 #rating>input:checked~label:hover~label{color:#FFED85;}
+.avatar {
+	vertical-align: middle;
+	width: 35px;
+	height: 35px;
+	margin-right: 10px;
+	border-radius: 50%;
+  }
+
+  .ui-menu-item {
+    list-style-type: none !important;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.ui-menu-item a {
+	color:#888888;
+}
+
+.ui-menu-item a:hover{
+	color: red;
+}
+
+#ui-id-1{
+	width: 522px !important;
+	height:183px;
+	border: 1px solid rgb(235, 235, 235) !important;
+	background-color: white;
+	z-index: 2 ;
+	border-radius: 2%;
+}
