--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7280,3 +7280,18 @@ label.inline {
 	z-index: 2 ;
 	border-radius: 2%;
 }
+::-webkit-input-placeholder {
+	text-align: center;
+ }
+ 
+ :-moz-placeholder { /* Firefox 18- */
+	text-align: center;  
+ }
+ 
+ ::-moz-placeholder {  /* Firefox 19+ */
+	text-align: center;  
+ }
+ 
+ :-ms-input-placeholder {  
+	text-align: center; 
+ }
